feat: support admin blog and project publishing
